--- a/testApp/static/moduleEdit.html
+++ b/testApp/static/moduleEdit.html
@@ -165,11 +165,13 @@
 															<input type="checkbox" value="2 phosphoglycerate" onchange="onRadioChange()" name="Product">
 															<span class="checkmark"></span>
 														</label>
+
 										    	</ul>
 												</div>
 
 												<button type="button" class="createReaction" id="createReaction">CREATE</button>
-												<label class="weight">
+												<button type="button" class="saveReaction" id="saveReaction">SAVE</button>
+												<!-- <label class="weight">
 													<label class=weightLabel>Weight:</label>
 													<input type="range" list="tickmarks" id="weightSlider" name="Weight" min="-1" max ="1" step=0.01 onchange="updateTextInput(this.value);">
 														<datalist id="tickmarks" class="tickmarks">
@@ -196,8 +198,8 @@
 														  <option value="1.0">
 														</datalist>
 														<input class="weightValue" type="text" id="weightSliderValue">
-														<button type="button" class="enterWeight" id="submitWeight">SUBMIT</button>
-												</label>
+														<button type="button" class="enterWeight" id="submitWeight">SUBMIT</button> -->
+												<!-- </label>
 												<label class="reversibleChoice">Reversible
 													<input type="radio" name="reversibleChoice" onchange="onRadioReverseChange()" value="Reversible">
 													<span class="checkmark"></span>
@@ -205,7 +207,16 @@
 												<label class="reversibleChoice">Irreversible
 													<input type="radio" name="reversibleChoice" onchange="onRadioReverseChange()" value="Irreversible" checked>
 													<span class="checkmark"></span>
-												</label>
+												</label> -->
+											</div>
+											<!-- The Modal -->
+											<div id="invalidModal" class="modal">
+
+											  <!-- Modal content -->
+											  <div class="modal-content">
+											    <span class="close">&times;</span>
+											    <p>You must select at least one substrate, enzyme and product, as well as no more than five products or substrates.</p>
+											  </div>
 											</div>
 				</form>
 			</div>
