--- a/testApp/static/moduleEdit.html
+++ b/testApp/static/moduleEdit.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<title>Module Edit Screen</title>
@@ -16,12 +16,14 @@
 			<img class="step1Image" id="Glucose" src="{% static 'images/Glucose.jpg' %}" style="display: none;">
 			<img class="step1Image" id="Glucose-6-Phosphate" src="{% static 'images/Glucose-6-Phosphate.jpg' %}" style="display: none;">
 			<img class="step1Image" id="Fructose-6-Phosphate" src="{% static 'images/Fructose-6-Phosphate.jpg' %}" style="display: none;">
-			<img class="step1Image" id="Fructose-1,6-bisphosphate" src={"% static 'images/Fructose-1,6-bisphosphate.jpg' %}" style="display: none;">
+			<img class="step1Image" id="Fructose-1,6-bisphosphate" src="{% static 'images/Fructose-1,6-bisphosphate.jpg' %}" style="display: none;">
 			<img class="step1Image" id="Dihydroxyacetone Phosphate" src="{% static 'images/Dihydroxyacetone Phosphate.jpg' %}" style="display: none;">
-			<img class="step1Image" id="Glyceraldehyde-3-Phosphate" src={"% static 'images/Glyceraldehyde-3-Phosphate.jpg' %}" style="display: none;">
+			<img class="step1Image" id="Glyceraldehyde-3-Phosphate" src="{% static 'images/Glyceraldehyde-3-Phosphate.jpg' %}" style="display: none;">
 			<img class="step1Image" id="1,3-bisphoglycerate" src="{% static 'images/1,3-bisphoglycerate.jpg' %}" style="display: none;">
 			<img class="step1Image" id="3 phosphoglycerate" src="{% static 'images/3 phosphoglycerate.jpg' %}" style="display: none;">
 			<img class="step1Image" id="2 phosphoglycerate" src="{% static 'images/2 phosphoglycerate.jpg' %}" style="display: none;">
+			<img class="step1Image" id="Phosphoenolpyruvate" src="{% static 'images/Phosphoenolpyruvate.jpg' %}" style="display: none;">
+			<img class="step1Image" id="Pyruvate" src="{% static 'images/Pyruvate.jpg' %}" style="display: none;">
 		<!-- <div class="container-login100" style="background-image: url('images/bg-01.jpg');">
 			<img class="step1Image" id="step1" src="images/GlycolysisStep1.jpg" style="display: none;">
 			<img class="step1Image" id="Glucose" src="images/Glucose.jpg" style="display: none;">
@@ -32,7 +34,9 @@
 			<img class="step1Image" id="Glyceraldehyde-3-Phosphate" src="images/Glyceraldehyde-3-Phosphate.jpg" style="display: none;">
 			<img class="step1Image" id="1,3-bisphoglycerate" src="images/1,3-bisphoglycerate.jpg" style="display: none;">
 			<img class="step1Image" id="3 phosphoglycerate" src="images/3 phosphoglycerate.jpg" style="display: none;">
-			<img class="step1Image" id="2 phosphoglycerate" src="images/2 phosphoglycerate.jpg" style="display: none;"> -->
+			<img class="step1Image" id="2 phosphoglycerate" src="images/2 phosphoglycerate.jpg" style="display: none;">
+			<img class="step1Image" id="Phosphoenolpyruvate" src="images/Phosphoenolpyruvate.jpg" style="display: none;">
+			<img class="step1Image" id="Pyruvate" src="images/Pyruvate.jpg" style="display: none;"> -->
 			<div class="wrap-login100">
 				<form class="login100-form validate-form">
                     <div class="editToolbar">
@@ -63,7 +67,7 @@
 													  	<input type="checkbox" value="Fructose-6-Phosphate" onchange="onRadioChange()" name="Substrate">
 													  	<span class="checkmark"></span>
 														</label>
-														<label class="container">Fructose-1,6-bisphosphate
+														<label class="container">Fructose-1,6-Bisphosphate
 													  	<input type="checkbox" value="Fructose-1,6-bisphosphate" onchange="onRadioChange()" name="Substrate">
 													  	<span class="checkmark"></span>
 														</label>
@@ -75,12 +79,20 @@
 													  	<input type="checkbox" value="Glyceraldehyde-3-Phosphate" onchange="onRadioChange()" name="Substrate">
 													  	<span class="checkmark"></span>
 														</label>
-														<label class="container">1,3-bisphoglycerate
+														<label class="container">1,3-Bisphoglycerate
 													  	<input type="checkbox" value="1,3-bisphoglycerate" onchange="onRadioChange()" name="Substrate">
 													  	<span class="checkmark"></span>
 														</label>
-														<label class="container">3 phosphoglycerate
+														<label class="container">3 Phosphoglycerate
 													  	<input type="checkbox" value="3 phosphoglycerate" onchange="onRadioChange()" name="Substrate">
+													  	<span class="checkmark"></span>
+														</label>
+														<label class="container">2 Phosphoglycerate
+													  	<input type="checkbox" value="2 phosphoglycerate" onchange="onRadioChange()" name="Substrate">
+													  	<span class="checkmark"></span>
+														</label>
+														<label class="container">Phosphoenolpyruvate
+													  	<input type="checkbox" value="Phosphoenolpyruvate" onchange="onRadioChange()" name="Substrate">
 													  	<span class="checkmark"></span>
 														</label>
 									    		</ul>
@@ -88,44 +100,44 @@
 												<div id="enzsContainer">
 													<label id="enzsLabel">ENZYMES</label>
 													<ul class="enzs" id="enzymes">
-														<label class="container">Phosphoglucoisomerase
-															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Phosphoglucoisomerase">
+														<label class="container">Hexokinase
+															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Hexokinase">
 															<span class="checkmark"></span>
 														</label>
-														<label class="container">Enolase
-															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Enolase" >
+														<label class="container">Phosphoglucose Isomerase
+															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Phosphoglucose isomerase">
 															<span class="checkmark"></span>
 														</label>
-														<label class="container">Phosphoglycerate mutase
-															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Phosphoglycerate mutase">
+														<label class="container">Phosphofructokinase
+															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Phosphofructokinase">
 															<span class="checkmark"></span>
 														</label>
-														<label class="container">Phosphoglycerate kinase
-															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Phosphoglycerate kinase">
+														<label class="container">Aldolase
+															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="aldolase">
 															<span class="checkmark"></span>
 														</label>
-														<label class="container">G3P dehydrogenase
-															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="G3P dehydrogenase">
-															<span class="checkmark"></span>
-														</label>
-														<label class="container">Triosephosphate isomerase
+														<label class="container">Triosephosphate Isomerase
 															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Triosephosphate isomerase">
 															<span class="checkmark"></span>
 														</label>
-														<label class="container">Fructose 1,6 bisphosphate aldolase
-															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Fructose 1,6 bisphosphate aldolase">
+														<label class="container">Glyceraldehyde Phosphate Dehydrogenase
+															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Glyceraldehyde phosphate dehydrogenase">
 															<span class="checkmark"></span>
 														</label>
-														<label class="container">Phosphoenol pyruvate carboxykinase
-															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Phosphoenol pyruvate carboxykinase">
+														<label class="container">Phosphoglycerate Kinase
+															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Phosphoglycerate kinase">
 															<span class="checkmark"></span>
 														</label>
-														<label class="container">Fructose 1,6 bisphosphatase
-															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Fructose 1,6 bisphosphatase">
+														<label class="container">Phosphoglycerate Mutase
+															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Phosphoglycerate mutase">
 															<span class="checkmark"></span>
 														</label>
-														<label class="container">Glucose 6 phosphatase
-															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Glucose 6 phosphatase">
+														<label class="container">Enolase
+															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Enolase">
+															<span class="checkmark"></span>
+														</label>
+														<label class="container">Pyruvate Kinase
+															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Pyruvate kinase">
 															<span class="checkmark"></span>
 														</label>
 													</ul>
@@ -141,7 +153,7 @@
 															<input type="checkbox" value="Fructose-6-Phosphate" onchange="onRadioChange()" name="Product">
 															<span class="checkmark"></span>
 														</label>
-														<label class="container">Fructose-1,6-bisphosphate
+														<label class="container">Fructose-1,6-Bisphosphate
 															<input type="checkbox" value="Fructose-1,6-bisphosphate" onchange="onRadioChange()" name="Product">
 															<span class="checkmark"></span>
 														</label>
@@ -153,16 +165,24 @@
 															<input type="checkbox" value="Glyceraldehyde-3-Phosphate" onchange="onRadioChange()" name="Product">
 															<span class="checkmark"></span>
 														</label>
-														<label class="container">1,3-bisphoglycerate
+														<label class="container">1,3-Bisphoglycerate
 															<input type="checkbox" value="1,3-bisphoglycerate" onchange="onRadioChange()" name="Product">
 															<span class="checkmark"></span>
 														</label>
-														<label class="container">3 phosphoglycerate
+														<label class="container">3 Phosphoglycerate
 															<input type="checkbox" value="3 phosphoglycerate" onchange="onRadioChange()" name="Product">
 															<span class="checkmark"></span>
 														</label>
-														<label class="container">2 phosphoglycerate
+														<label class="container">2 Phosphoglycerate
 															<input type="checkbox" value="2 phosphoglycerate" onchange="onRadioChange()" name="Product">
+															<span class="checkmark"></span>
+														</label>
+														<label class="container">Pyruvate
+															<input type="checkbox" value="Pyruvate" onchange="onRadioChange()" name="Product">
+															<span class="checkmark"></span>
+														</label>
+														<label class="container">Phosphoenolpyruvate
+															<input type="checkbox" value="Phosphoenolpyruvate" onchange="onRadioChange()" name="Product">
 															<span class="checkmark"></span>
 														</label>
 
