--- a/testApp/static/modelEdit copy.html
+++ b/testApp/static/modelEdit copy.html
@@ -3,14 +3,17 @@
 <head>
 	<title>Model Edit Screen</title>
     <meta charset="UTF-8">
-    {% load static %}
+    <!-- {% load static %}
 	<link rel="stylesheet" type="text/css" href="{% static 'css/util.css' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'css/modelEdit.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/modelEdit.css' %}"> -->
+	<link rel="stylesheet" type="text/css" href="css/util.css">
+	<link rel="stylesheet" type="text/css" href="css/modelEdit.css">
 <!--===============================================================================================-->
 </head>
 <body>
 	<div class="limiter">
-		<div class="container-login100" style="background-image: url('{% static 'images/bg-01.jpg' %}');">
+		<!-- <div class="container-login100" style="background-image: url('{% static 'images/bg-01.jpg' %}');"> -->
+		<div class="container-login100" style="background-image: url('images/bg-01.jpg');">
 			<div class="wrap-login100">
 				<form class="login100-form validate-form">
                     <div class="editToolbar">
@@ -59,7 +62,8 @@
 
 
 	<div id="dropDownSelect1"></div>
-	<script src="{% static 'js/modelEdit.js' %}"></script>
+	<!-- <script src="{% static 'js/modelEdit.js' %}"></script> -->
+	<script src="js/modelEdit.js"></script>
 
 </body>
 </html>
